--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f532cf60-bf35-4cad-be31-c86cf2a836c9",
+   "cell_type": "markdown",
+   "id": "b12fa254-a6a0-4413-8248-1abb9bee230b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Agenda for today"
+   ]
   }
  ],
  "metadata": {
