--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -5,7 +5,12 @@
    "id": "b12fa254-a6a0-4413-8248-1abb9bee230b",
    "metadata": {},
    "source": [
-    "# Agenda for today"
+    "# Agenda \n",
+    "\n",
+    "1. What are comprehensions?\n",
+    "2. List comprehensions\n",
+    "3. List comprehensions and files\n",
+    "4. Set comprehensions"
    ]
   }
  ],
