--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -10,8 +10,19 @@
     "1. What are comprehensions?\n",
     "2. List comprehensions\n",
     "3. List comprehensions and files\n",
-    "4. Set comprehensions"
+    "4. Set comprehensions\n",
+    "5. Dict comprehensions\n",
+    "6. Nested comprehensions\n",
+    "7. Generator expressions (aka generator comprehensions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf246c4c-87e1-42ca-97b0-65159b10fd9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
