--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -22,7 +22,10 @@
    "id": "bf246c4c-87e1-42ca-97b0-65159b10fd9f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# I have  a list of integers\n",
+    "# I want to get a list of th"
+   ]
   }
  ],
  "metadata": {
