--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -18,13 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bf246c4c-87e1-42ca-97b0-65159b10fd9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# I have  a list of integers\n",
-    "# I want to get a list of th"
+    "# I want to get a list of those integers squared\n",
+    "\n",
+    "numbers = range(10)\n",
+    "\n",
+    "output = []\n",
+    "\n",
+    "for one_number in numbers:\n",
+    "    output.append(one_number ** 2)\n",
+    "\n",
+    "output    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41c0f163-34a9-4c33-bb56-9785201ff3d7",
+   "metadata": {},
+   "source": [
+    "A comprehension (a list comprehension) is perfect for when you want to get a new list based on an existing one)"
    ]
   }
  ],
