--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -52,7 +52,45 @@
    "id": "41c0f163-34a9-4c33-bb56-9785201ff3d7",
    "metadata": {},
    "source": [
-    "A comprehension (a list comprehension) is perfect for when you want to get a new list based on an existing one)"
+    "A comprehension (a list comprehension) is perfect for when you want to get a new list based on an existing one (or any existing sequence).\n",
+    "\n",
+    "- I have a list of integers\n",
+    "- I want a list of integers (the first list's squared)\n",
+    "- I know how to transform each element in the first list to the second one\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8c2206e5-2405-4662-9a19-daaaf10f82e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# here's the comprehension version of the above\n",
+    "\n",
+    "[one_number ** 2 for one_number in numbers]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b654a4d-3ad9-4fed-953c-082c3001143f",
+   "metadata": {},
+   "source": [
+    "What's going on here?\n",
+    "\n",
+    "- We start from the `for` -- that loop runs "
    ]
   }
  ],
