--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8c2206e5-2405-4662-9a19-daaaf10f82e5",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,22 @@
    "source": [
     "What's going on here?\n",
     "\n",
-    "- We start from the `for` -- that loop runs "
+    "- We start from the `for` -- that loop runs first and foremost\n",
+    "- The iterable value (`numbers`, here) that we iterate over can be anything -- not just a list\n",
+    "- The first part of our comprehension is a Python expression -- meaning, an operation, function, or method call that returns a value\n",
+    "- The expression is invoked once for each element in the iterable\n",
+    "- The `[]` around our comprehension tell Python that we want to create a list\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "618e027b-fee2-40b1-b19e-36e3414fd610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[one_number ** 2 for one_number in numbers]"
    ]
   }
  ],
