--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -100,12 +100,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "618e027b-fee2-40b1-b19e-36e3414fd610",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[one_number ** 2              # expression -- SELECT\n",
+    " for one_number in numbers]   # iteration --  FROM "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea292b7a-57aa-4439-9f75-dd21e394c94c",
+   "metadata": {},
+   "source": [
+    "If you have a list already, and you want a new list based on it, you should use a comprehension!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c39e35f-cc3e-42ef-9500-190dee7e7614",
    "metadata": {},
    "outputs": [],
    "source": [
-    "[one_number ** 2 for one_number in numbers]"
+    "# if I have a list of s"
    ]
   }
  ],
