--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -232,8 +232,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a8e01752-dcd1-4565-8062-60e678281b4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This Is A Sample Sentence For My Tutorial'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'this is a sample sentence for my tutorial'\n",
+    "\n",
+    "s.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e170e324-5bdf-4c00-9bae-c6bb09e6142d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a sample sentence for my tutorial'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# can I do the same thing as str.title but using only str.capitalize?\n",
+    "\n",
+    "s.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "eee0ad70-f815-41a3-a7e0-1cb023389768",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This Is A Sample Sentence For My Tutorial'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join([one_word.capitalize()\n",
+    "          for one_word in s.split()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b0c2ed7-111d-4ef3-a4e1-3099553553cf",
    "metadata": {},
    "outputs": [],
    "source": []
