--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -299,12 +299,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b0c2ed7-111d-4ef3-a4e1-3099553553cf",
+   "cell_type": "markdown",
+   "id": "3fbfd616-c973-4a48-adec-fa6c660aa62d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercises:\n",
+    "\n",
+    "1. Ask the user to enter a string containing numbers, separated by spaces. Add those numbers together (as integers), and print the result. It's OK to use the builtin `sum` func"
+   ]
   }
  ],
  "metadata": {
