--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -305,8 +305,17 @@
    "source": [
     "# Exercises:\n",
     "\n",
-    "1. Ask the user to enter a string containing numbers, separated by spaces. Add those numbers together (as integers), and print the result. It's OK to use the builtin `sum` func"
+    "1. Ask the user to enter a string containing numbers, separated by spaces. Add those numbers together (as integers), and print the result. It's OK to use the builtin `sum` function. We can assume that our user will only enter digits and whitespace.\n",
+    "2. Ask the user to enter a string, and print the length of the string, except for whitespace. Don't use `str.replace`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f7a400d-2389-4d2a-a950-5b7b2fa522d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
