--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -315,7 +315,10 @@
    "id": "4f7a400d-2389-4d2a-a950-5b7b2fa522d3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text = input('Enter some numbers: ').strip()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
