--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -311,14 +311,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4f7a400d-2389-4d2a-a950-5b7b2fa522d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter some numbers:  10 20 30 40 50\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text = input('Enter some numbers: ').strip()\n",
-    "\n"
+    "\n",
+    "sum([int(one_number)\n",
+    "    for one_number in text.split()])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "93fe3f17-051d-43bb-b9bc-d3fb1660db6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a sentence:  hello out there\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[5, 3, 5]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = input('Enter a sentence: ').strip()\n",
+    "\n",
+    "[len(one_word)\n",
+    "for one_word in text.split()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6247b537-7903-4356-ade2-9adfcb5daa0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
