--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "93fe3f17-051d-43bb-b9bc-d3fb1660db6b",
    "metadata": {},
    "outputs": [
@@ -356,10 +356,10 @@
     {
      "data": {
       "text/plain": [
-       "[5, 3, 5]"
+       "13"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,8 +367,8 @@
    "source": [
     "text = input('Enter a sentence: ').strip()\n",
     "\n",
-    "[len(one_word)\n",
-    "for one_word in text.split()]"
+    "sum([len(one_word)\n",
+    "    for one_word in text.split()])"
    ]
   },
   {
