--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -836,24 +836,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "4635f469-b7a5-4739-ac4c-acadd4c9e282",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['##\\n',\n",
-       " '# User Database\\n',\n",
-       " '# \\n',\n",
-       " '# Note that this file is consulted directly only when the system is running\\n',\n",
-       " '# in single-user mode.  At other times this information is provided by\\n',\n",
-       " '# Open Directory.\\n',\n",
-       " '#\\n',\n",
-       " '# See the opendirectoryd(8) man page for additional information about\\n',\n",
-       " '# Open Directory.\\n',\n",
-       " '##\\n',\n",
-       " 'nobody',\n",
+       "['nobody',\n",
        " 'root',\n",
        " 'daemon',\n",
        " '_uucp',\n",
@@ -985,7 +975,7 @@
        " '_oahd']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,8 +984,9 @@
     "# can I get the usernames from this file?\n",
     "# remember, the username is what comes before the first :\n",
     "\n",
-    "[one_line.split(':')[0]\n",
-    "for one_line in open('/etc/passwd')]"
+    "[one_line.split(':')[0]               # expression -- SELECT\n",
+    " for one_line in open('/etc/passwd')  # iteration -- FROM\n",
+    " if not one_line.startswith('#')]     # condition -- WHERE"
    ]
   },
   {
@@ -1004,7 +995,9 @@
    "id": "fb88ce17-5e35-4b25-b256-25243af27f0c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# the file nums.txt "
+   ]
   }
  ],
  "metadata": {
