--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -991,13 +991,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "fb88ce17-5e35-4b25-b256-25243af27f0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "\t10     \n",
+      "\t20\n",
+      "  \t3\n",
+      "\t\t   \t20        \n",
+      "\n",
+      " 25\n"
+     ]
+    }
+   ],
    "source": [
-    "# the file nums.txt "
+    "# the file nums.txt is in the zipfile I asked you to download\n",
+    "# at https://files.lerner.co.il -- basic/intro Python exercise files\n",
+    "\n",
+    "!cat nums.txt"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dcd3c01-9fb8-495a-beb7-493316b8b8fb",
+   "metadata": {},
+   "source": [
+    "# Exercise: Sum numbers in `nums.txt`\n",
+    "\n",
+    "- Every line in `nums.txt` contains either 0 integers or 1 integer. Each integer might have some whitespace before or after it.\n",
+    "- Using a comprehension and `sum`, total the numbers in this file.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76665625-ab9f-480c-b5db-a91ed3b8bf0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
