--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -1029,8 +1029,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "76665625-ab9f-480c-b5db-a91ed3b8bf0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['5\\n',\n",
+       " '\\t10     \\n',\n",
+       " '\\t20\\n',\n",
+       " '  \\t3\\n',\n",
+       " '\\t\\t   \\t20        \\n',\n",
+       " '\\n',\n",
+       " ' 25\\n']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[one_item.strip()\n",
+    "for one_item in open('nums.txt')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c4131a6-dae4-42f4-95c8-0846da1cc7d1",
    "metadata": {},
    "outputs": [],
    "source": []
