--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -1116,34 +1116,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "92be717b-63d8-4216-b749-7b44a1c1483b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5, 10, 20, 3, 20, 25]"
+       "83"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "su[int(one_item)\n",
+    "sum([int(one_item)\n",
     "for one_item in open('nums.txt')\n",
-    "if one_item.strip()]"
+    "if one_item.strip()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "83135b07-77f5-43f4-9247-f8891ebc9ff8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adidas\torange\t43\n",
+      "Nike\tblack\t41\n",
+      "Adidas\tblack\t39\n",
+      "New Balance\tpink\t41\n",
+      "Nike\twhite\t44\n",
+      "New Balance\torange\t38\n",
+      "Nike\tpink\t44\n",
+      "Adidas\tpink\t44\n",
+      "New Balance\torange\t39\n",
+      "New Balance\tblack\t43\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head shoe-data.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2442468a-5bbd-4e8d-a9a4-0ac9e78f2953",
+   "metadata": {},
+   "source": [
+    "# Exercise: Shoe dicts\n",
+    "\n",
+    "`shoe-data.txt` contains 100 lines. Each line contains three fields (brand, color, and size) separated by tabs (`'\\t'`). \n",
+    "\n",
+    "Use a list comprehension to turn this file into a list of dictionaries, where each dict has three keys -- `brand`, `color`, and `size`. The values can re"
+   ]
   }
  ],
  "metadata": {
