--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -1173,8 +1173,27 @@
     "\n",
     "`shoe-data.txt` contains 100 lines. Each line contains three fields (brand, color, and size) separated by tabs (`'\\t'`). \n",
     "\n",
-    "Use a list comprehension to turn this file into a list of dictionaries, where each dict has three keys -- `brand`, `color`, and `size`. The values can re"
+    "Use a list comprehension to turn this file into a list of dictionaries, where each dict has three keys -- `brand`, `color`, and `size`. The values can remain strings.\n",
+    "\n",
+    "The expression on the first line of the comprehension can be any Python function, method, or operator -- including a function that you write! Here, I recommend that you write a function, `line_to_dict`, that takes a line from the function and returns a dict. The comprehension will invoke the function once per line, producing a list of dicts.\n",
+    "\n",
+    "The result will look like\n",
+    "\n",
+    "```python\n",
+    "    {'brand':'Adidas',\n",
+    "     'color':'black',\n",
+    "    'size':'45'}\n",
+    "    ...\n",
+    "```    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdbf0c75-6b83-4910-824a-abe1b6c7acb2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
