--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -1189,124 +1189,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "fdbf0c75-6b83-4910-824a-abe1b6c7acb2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {},\n",
-       " {}]"
+       "[{'brand': 'Adidas', 'color': 'orange', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '36'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '36'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '42'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '43'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '36'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '42'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'}]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def line_to_dict(text):\n",
-    "    # return text.strip().split('\\t')\n",
-    "    return {}\n",
+    "    fields = text.strip().split('\\t')\n",
+    "    return {'brand': fields[0],\n",
+    "            'color': fields[1],\n",
+    "            'size': fields[2]}\n",
+    "\n",
+    "[line_to_dict(one_line)\n",
+    "for one_line in open('shoe-data.txt')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "4e188476-43ad-47ec-94b9-954c990956ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'brand': 'Adidas', 'color': 'orange', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '36'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '36'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '42'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '43'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '36'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '42'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'}]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def line_to_dict(text):\n",
+    "    brand, color, size = text.strip().split('\\t')\n",
+    "    return {'brand': brand,\n",
+    "            'color': color,\n",
+    "            'size': size}\n",
     "\n",
     "[line_to_dict(one_line)\n",
     "for one_line in open('shoe-data.txt')]"
@@ -1315,10 +1444,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e188476-43ad-47ec-94b9-954c990956ff",
+   "id": "55ebe7aa-f313-4593-91e5-4adad405a19f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# we can create a dict "
+   ]
   }
  ],
  "metadata": {
