--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -1443,13 +1443,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "55ebe7aa-f313-4593-91e5-4adad405a19f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 10, 'b': 20, 'c': 30}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# we can create a dict "
+    "# we can create a dict by invoking \"dict\" on a list of tuples \n",
+    "# each tuple is a key-value pair\n",
+    "\n",
+    "dict([('a',10), ('b', 20), ('c', 30)])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "3183940c-4da6-4c92-bddf-a6fdc4525ebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'brand': 'Adidas', 'color': 'orange', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '36'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '36'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '35'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '42'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '43'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '38'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '41'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '36'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '40'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '41'},\n",
+       " {'brand': 'Adidas', 'color': 'orange', 'size': '37'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'pink', 'size': '36'},\n",
+       " {'brand': 'Adidas', 'color': 'white', 'size': '35'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '38'},\n",
+       " {'brand': 'Nike', 'color': 'pink', 'size': '42'},\n",
+       " {'brand': 'New Balance', 'color': 'black', 'size': '43'},\n",
+       " {'brand': 'Nike', 'color': 'white', 'size': '38'},\n",
+       " {'brand': 'New Balance', 'color': 'pink', 'size': '39'},\n",
+       " {'brand': 'Nike', 'color': 'orange', 'size': '39'},\n",
+       " {'brand': 'New Balance', 'color': 'orange', 'size': '40'},\n",
+       " {'brand': 'New Balance', 'color': 'white', 'size': '44'},\n",
+       " {'brand': 'Adidas', 'color': 'black', 'size': '42'},\n",
+       " {'brand': 'Nike', 'color': 'black', 'size': '35'}]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def line_to_dict(text):\n",
+    "    return dict(zip(['brand', 'color', 'size'],\n",
+    "                    text.strip().split('\\t')))\n",
+    "\n",
+    "[line_to_dict(one_line)\n",
+    "for one_line in open('shoe-data.txt')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a0d07bb-62cf-46ef-95da-147cda1d5fd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
