--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -1619,14 +1619,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "f756e7e4-6bdd-496d-9b6d-5744a8fa34bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['67.218.116.165',\n",
+       " '66.249.71.65',\n",
+       " '65.55.106.183',\n",
+       " '65.55.106.183',\n",
+       " '66.249.71.65',\n",
+       " '66.249.71.65',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '65.55.106.131',\n",
+       " '65.55.106.131',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '65.55.106.186',\n",
+       " '65.55.106.186',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '74.52.245.146',\n",
+       " '74.52.245.146',\n",
+       " '66.249.65.43',\n",
+       " '66.249.65.43',\n",
+       " '66.249.65.43',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '65.55.207.25',\n",
+       " '65.55.207.25',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '65.55.207.94',\n",
+       " '65.55.207.94',\n",
+       " '66.249.65.12',\n",
+       " '65.55.207.71',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '66.249.65.12',\n",
+       " '98.242.170.241',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '65.55.207.126',\n",
+       " '65.55.207.126',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '82.34.9.20',\n",
+       " '82.34.9.20',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '65.55.106.155',\n",
+       " '65.55.106.155',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '65.55.207.77',\n",
+       " '65.55.207.77',\n",
+       " '66.249.65.38',\n",
+       " '67.218.116.165',\n",
+       " '66.249.65.38',\n",
+       " '208.80.193.28',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '89.248.172.58',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '67.195.112.35',\n",
+       " '66.249.65.38',\n",
+       " '65.55.207.50',\n",
+       " '65.55.207.50',\n",
+       " '65.55.207.50',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '65.55.215.75',\n",
+       " '65.55.215.75',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38',\n",
+       " '66.249.65.38']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get the IP addresses from this file\n",
     "\n",
-    "[]"
+    "[one_line.split()[0]\n",
+    "for one_line in open('mini-access-log.txt')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d9051b1d-f9e3-4778-a55b-a770073e3037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how many times did each IP address access my server?\n",
+    "\n",
+    "# one of my favorite classes in the standard library is collections.Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "306cd8b2-2552-46dc-8d75-4e77ebb0d41f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'a': 7, 'x': 7, 'b': 3})"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# here's how not to use Counter\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "c = Counter()\n",
+    "c['a'] += 5\n",
+    "c['b'] += 3\n",
+    "c['a'] += 2\n",
+    "c['x'] += 7\n",
+    "\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b0b505-a07c-4fbc-8c68-892ccfa27bfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the real way to use Counter is to throw an iterable at it\n",
+    "# it then counts how many times each element appears\n",
+    "# the elements in the original becom"
    ]
   }
  ],
