--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -1891,14 +1891,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "a6b0b505-a07c-4fbc-8c68-892ccfa27bfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'a': 4, 'b': 3, 'c': 2, 'd': 1, 'e': 1, 'f': 1, 'x': 1})"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the real way to use Counter is to throw an iterable at it\n",
     "# it then counts how many times each element appears\n",
-    "# the elements in the original becom"
+    "# the elements in the original become the keys in Counter\n",
+    "# the values are the number of times that each element appears\n",
+    "\n",
+    "c = Counter('abcaabcdefxab')\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "2828f07c-d976-42ef-a75f-a7500aa2f6f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 4), ('b', 3), ('c', 2), ('d', 1), ('e', 1), ('f', 1), ('x', 1)]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.most_common()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b679b92f-2990-41a4-b32d-621ce9d96663",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 4), ('b', 3), ('c', 2)]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.most_common(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "4f14c3bb-8421-4cf6-b47b-d81b02c612d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'66.249.65.38': 100,\n",
+       "         '66.249.65.12': 32,\n",
+       "         '89.248.172.58': 22,\n",
+       "         '67.195.112.35': 16,\n",
+       "         '66.249.71.65': 3,\n",
+       "         '66.249.65.43': 3,\n",
+       "         '65.55.207.50': 3,\n",
+       "         '67.218.116.165': 2,\n",
+       "         '65.55.106.183': 2,\n",
+       "         '65.55.106.131': 2,\n",
+       "         '65.55.106.186': 2,\n",
+       "         '74.52.245.146': 2,\n",
+       "         '65.55.207.25': 2,\n",
+       "         '65.55.207.94': 2,\n",
+       "         '65.55.207.126': 2,\n",
+       "         '82.34.9.20': 2,\n",
+       "         '65.55.106.155': 2,\n",
+       "         '65.55.207.77': 2,\n",
+       "         '65.55.215.75': 2,\n",
+       "         '65.55.207.71': 1,\n",
+       "         '98.242.170.241': 1,\n",
+       "         '208.80.193.28': 1})"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter([one_line.split()[0]\n",
+    "        for one_line in open('mini-access-log.txt')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ebbbc83-af33-404f-a53a-885d6734bacc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = Counter([one_line.split()[0]\n",
+    "        for one_line in open('mini-access-log.txt')])\n",
+    "\n",
+    "for key, value in c.ite"
    ]
   }
  ],
