--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2003,16 +2003,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "7ebbbc83-af33-404f-a53a-885d6734bacc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67.218.116.165\t2\n",
+      "66.249.71.65\t3\n",
+      "65.55.106.183\t2\n",
+      "66.249.65.12\t32\n",
+      "65.55.106.131\t2\n",
+      "65.55.106.186\t2\n",
+      "74.52.245.146\t2\n",
+      "66.249.65.43\t3\n",
+      "65.55.207.25\t2\n",
+      "65.55.207.94\t2\n",
+      "65.55.207.71\t1\n",
+      "98.242.170.241\t1\n",
+      "66.249.65.38\t100\n",
+      "65.55.207.126\t2\n",
+      "82.34.9.20\t2\n",
+      "65.55.106.155\t2\n",
+      "65.55.207.77\t2\n",
+      "208.80.193.28\t1\n",
+      "89.248.172.58\t22\n",
+      "67.195.112.35\t16\n",
+      "65.55.207.50\t3\n",
+      "65.55.215.75\t2\n"
+     ]
+    }
+   ],
    "source": [
     "c = Counter([one_line.split()[0]\n",
     "        for one_line in open('mini-access-log.txt')])\n",
     "\n",
-    "for key, value in c.ite"
+    "for key, value in c.items():\n",
+    "    print(f'{key}\\t{value}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "8c1ce4f8-ad72-4aba-aaca-221e82167d0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67.218.116.165\txx\n",
+      "66.249.71.65\txxx\n",
+      "65.55.106.183\txx\n",
+      "66.249.65.12\txxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n",
+      "65.55.106.131\txx\n",
+      "65.55.106.186\txx\n",
+      "74.52.245.146\txx\n",
+      "66.249.65.43\txxx\n",
+      "65.55.207.25\txx\n",
+      "65.55.207.94\txx\n",
+      "65.55.207.71\tx\n",
+      "98.242.170.241\tx\n",
+      "66.249.65.38\txxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\n",
+      "65.55.207.126\txx\n",
+      "82.34.9.20\txx\n",
+      "65.55.106.155\txx\n",
+      "65.55.207.77\txx\n",
+      "208.80.193.28\tx\n",
+      "89.248.172.58\txxxxxxxxxxxxxxxxxxxxxx\n",
+      "67.195.112.35\txxxxxxxxxxxxxxxx\n",
+      "65.55.207.50\txxx\n",
+      "65.55.215.75\txx\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Counter([one_line.split()[0]\n",
+    "        for one_line in open('mini-access-log.txt')])\n",
+    "\n",
+    "for key, value in c.items():\n",
+    "    print(f'{key}\\t{value * 'x'}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a43f0716-613e-4092-bb82-6c6c32b13d8b",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "- Set comprehensions\n",
+    "- Dict comprehensions\n",
+    "- Nested comprehensions\n",
+    "- Generator expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a8cab8c-0745-4c45-a2c7-48ddd0d6f08e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
