--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2102,8 +2102,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "0a8cab8c-0745-4c45-a2c7-48ddd0d6f08e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# variable scoping and comprehensions\n",
+    "\n",
+    "x = 100\n",
+    "\n",
+    "for i in range(10):\n",
+    "    x = i ** 2\n",
+    "\n",
+    "x    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ab0f3dc-f7ed-48cf-ba5f-76c39372f6ad",
    "metadata": {},
    "outputs": [],
    "source": []
