--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2130,8 +2130,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "2ab0f3dc-f7ed-48cf-ba5f-76c39372f6ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 100\n",
+    "\n",
+    "[x \n",
+    " for x in range(10)]\n",
+    "\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "684bb44e-ded2-4e69-8e3b-038f2664064b",
    "metadata": {},
    "outputs": [],
    "source": []
