--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2156,8 +2156,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "684bb44e-ded2-4e69-8e3b-038f2664064b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc():\n",
+    "    return [x \n",
+    "         for x in range(10)]\n",
+    "\n",
+    "myfunc()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "646c3247-baa3-47b9-a53e-68df4c60fb07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1           RESUME                   0\n",
+      "\n",
+      "   3           LOAD_GLOBAL              1 (range + NULL)\n",
+      "               LOAD_CONST               1 (10)\n",
+      "               CALL                     1\n",
+      "               GET_ITER\n",
+      "\n",
+      "   2           LOAD_FAST_AND_CLEAR      0 (x)\n",
+      "               SWAP                     2\n",
+      "       L1:     BUILD_LIST               0\n",
+      "               SWAP                     2\n",
+      "\n",
+      "   3           GET_ITER\n",
+      "       L2:     FOR_ITER                 5 (to L3)\n",
+      "               STORE_FAST               0 (x)\n",
+      "\n",
+      "   2           LOAD_FAST                0 (x)\n",
+      "               LIST_APPEND              2\n",
+      "               JUMP_BACKWARD            7 (to L2)\n",
+      "\n",
+      "   3   L3:     END_FOR\n",
+      "               POP_TOP\n",
+      "\n",
+      "   2   L4:     SWAP                     2\n",
+      "               STORE_FAST               0 (x)\n",
+      "               RETURN_VALUE\n",
+      "\n",
+      "  --   L5:     SWAP                     2\n",
+      "               POP_TOP\n",
+      "\n",
+      "   2           SWAP                     2\n",
+      "               STORE_FAST               0 (x)\n",
+      "               RERAISE                  0\n",
+      "ExceptionTable:\n",
+      "  L1 to L4 -> L5 [2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dis   # Python dis-assembler\n",
+    "\n",
+    "dis.dis(myfunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c76356-43c6-4e97-a787-863dfd59f14e",
    "metadata": {},
    "outputs": [],
    "source": []
