--- a/Comprehending comprehensions.ipynb
+++ b/Comprehending comprehensions.ipynb
@@ -2235,11 +2235,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "b2c76356-43c6-4e97-a787-863dfd59f14e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# let's get our usernames from /etc/passwd\n",
+    "\n",
+    "usernames = [one_line.split(':')[0]\n",
+    " for one_line in open('/etc/passwd')\n",
+    " if not one_line.startswith('#')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "1660d333-a4cc-452c-a07b-be85d7212d0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if I want, I can search inside of this list!\n",
+    "\n",
+    "'root' in usernames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f783df10-fc4f-4f70-9e6a-9f76e57f27cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'reuven' in usernames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f00a2a99-f4a4-4733-8157-46a028d55039",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'nobody' in usernames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d95c137-edb0-4db0-9b91-98d04d99e41d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if I could create a dict in which the keys were the usernames and the values\n",
+    "# were T"
+   ]
   }
  ],
  "metadata": {
